# jlc-search

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml
scripts/: healthcheck.sh  serve.sh  update.sh
src/jlc_search/: __init__.py  __main__.py  ai_search.py  api.py  datasheet.py  db.py  fetch.py  fts.py  models.py  optimize.py  update_pipeline.py  validators.py  verify.py
tests/: test_api.py  test_datasheet.py  test_db.py  test_fts.py  test_verify.py
