[project]
name = "jlc-search"
version = "0.1.0"
description = "嘉立创元件库搜索 API，支持 FTS5 + BM25 + Regexp"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
jlc-update = "jlc_search.update_pipeline:main"
jlc-serve = "jlc_search.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
